--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>
+<!-- <h1>
   {{title}}
 </h1>
+<app-login></app-login>
+ -->
+ <nav>
+     <a routerLink="/login">login</a>
+     <a routerLink="/register">register</a>
+   </nav>
+   <router-outlet></router-outlet>
