adding http call

--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -1,4 +1,4 @@
 <p>
   table works!
 </p>
-<ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>
+<ng2-smart-table [settings]="settings" [source]="data" *ngIf="data.length"></ng2-smart-table>
