--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,3 @@
 <h1>{{title}}</h1>
 <app-hello [btnText]='"login btn"' [list]="list"></app-hello>
-<app-table [settings]="settings" [data]="data"></app-table>
+<app-table [settings]="settings" [data]="tabledata" *ngIf="tabledata"></app-table>
